fix broken inpaint when zoom extension is enabled

--- a/extensions-builtin/sd-webui-ux/style.css
+++ b/extensions-builtin/sd-webui-ux/style.css
@@ -2793,9 +2793,16 @@ div[data-testid="image"] canvas {
 }
 
 
-
 #tab_img2img div.center.boundedheight.flex {
     display: block !important;
+}
+
+.image-container>.boundedheight.flex>img {
+    display: block !important;
+}
+
+.gap:has(>.gradio-image) {
+    overflow: hidden;
 }
 
 * .center.boundedheight>div:has(.brush),
